# Winlinez-Revival

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  run_winlinez.py
docs/handoffs/: codex-path-migration-2026-07-12.md
scripts/: build_portable.ps1
src/winlinez/: app.py  game.py  records.py
tests/: test_app_animation.py  test_game_logic.py  test_records.py
